# skills-mcp

./: .gitignore  README.md  mcp_server.py  pyproject.toml
.repo_summarize_mcp_logs/: mcp_server.py.bak
skills_mcp/: __init__.py  __main__.py  server.py
tests/: INTEGRATION_TEST_SUMMARY.md  STARTUP_DETECTION_IMPROVEMENT.md  STDIO_TESTING.md  stdio_test_client.py  test_server.py  test_stdio_integration.py
trash/assets/fastmcp-client-examples/: 20251205T115012Z___user_assets__fastmcp_client_example.py
trash/assets/mcp-builder/: 20251204T142833Z___notes__20251204T133334Z-update-health-check-example-to-use-human-readable-timestamps.md  20251204T142858Z___notes__20251204T134536Z-update-smart-async-with-time-threshold-switch-50s.md  20251204T143000Z___notes__20251204T132914Z-health-check-with-server-uptime-and-git-commit.md  20251204T143025Z___notes__20251204T132955Z-smart-async-pattern-for-long-running-mcp-tools.md  20260106T155251+0100___notes__20251217T125639+0100-smart-async-with-automatic-incremental-output---default-streaming-pattern.md  20260106T201212+0100___notes__20251217T132721+0100-removed-invalid-progress-callback-parameter-and-implemented-debug-error-handling.md
trash/assets/test-skill/: 20251205T164703+0100___notes__20251205T164548+0100-test-note.md
user-skills/: README.md
user-skills/mcp-builder/examples/: fastmcp_client_example.py  health_check_human_readable.py  job_progress_tracking.py  smart_async_decorator.py  smart_async_shielded_task.py
user-skills/mcp-builder/notes/: health-check.md  smart-async.md  (+2 more)
