[project]
name = "skills-mcp"
version = "0.1.0"
description = "FastMCP stdio server exposing Claude Agent Skills as MCP tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Skills MCP" }]
dependencies = [
  "fastmcp",
  "pyyaml",
]



[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills_mcp*"]

[project.scripts]
skills-mcp = "skills_mcp.server:run"
skills-mcp-cli = "skills_mcp.server:cli_main"

[tool.uv]
package = true
